--- a/.github/workflows/search.yml
+++ b/.github/workflows/search.yml
@@ -1,4 +1,5 @@
 name: Build and Deploy
+
 on:
   push:
     branches:
@@ -17,10 +18,10 @@ jobs:
         with:
           node-version: 14
 
-      - name: Install project dependencies
+      - name: Install dependencies
         run: npm install
 
-      - name: Build the project
+      - name: Build the React app
         run: npm run build
 
       - name: Deploy to GitHub Pages
@@ -28,18 +29,3 @@ jobs:
         with:
           branch: gh-pages
           folder: build
-
-      # Additional steps:
-      - name: Run tests
-        run: npm test
-
-      - name: Lint the code
-        run: npm run lint
-
-      - name: Package the application
-        run: npm run package
-
-      - name: Publish to npm registry
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
